2008-09-11  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (slime-output-stream): Remove last-flush-time
	slot.
	(sos/flush): Renamed from sos/misc-force-output.  Don't try to be
	clever: no timestamps and no line buffering.
	(sos/write-char, sos/write-string): Renamed from sos/out
	resp. sos/sout.  Call output-fn outside without-interrupts.
	(sos/reset-buffer): New function.

2008-09-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compilation-unit): Renamed to
	`slime-compilation-result'.
	(slime-last-compilation-unit): Renamed to
	`slime-last-compilation-result'.
	(slime-compiler-notes, slime-compiler-results): Adapted accordingly.
	(slime-compilation-finished): Ditto.

2008-09-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-popup-buffer-restore-snapshot): Make sure that
	the buffer-local variable containing the popup buffer's snapshot
	is set to nil in the right buffer.

2008-09-11  Tobias C. Rittweiler  <tcr@freebits.de>

	Reimplement recompilation support. The previous implementation
	involving specials was subtly broken with the :fd-handler
	communcation-style, because of serve-event's polite interplay with
	specials. (Cf. my slime-devel post "Per event bindings" on 2008-08-17.)

	* swank.lisp (with-swank-compilation-unit): Removed.
	(record-note-for-condition): Removed.
	(defstruct swank-compilation-unit): Renamed to
	`swank-compilation-result'.
	(swank-compilation-unit-for-emacs): Renamed to
	`swank-compilation-result-for-emacs'.
	(swank-compiler): Takes additional argument, the
	swank-compilation-result where caught notes should be accumulated
	into.
	(defslimefun compile-file-for-emacs): Adapted accordingly.
	(defslimefun compile-string-for-emacs): Ditto.
	(defslimefun compile-multiple-strings-for-emacs): New RPC call.

	* slime.el (slime-make-compile-expression-for-swank): Removed.
	(slime-compile-string): Don't use above function anymore. Adapted.